@@ -5,14 +5,14 @@ ctrldefault <- function(npar) {
      ## These are DEFAULTS. They may be nonsense in some contexts.
 
       allmeth <- c("BFGS", "CG", "Nelder-Mead", "L-BFGS-B", "nlm", "nlminb", 
-                "lbfgsb3", "Rcgmin", "Rcgmin2", "Rtnmin", "Rvmmin", "Rvmminq", "snewton", "snewtonm",
+                "lbfgsb3", "Rcgmin", "Rcgmin2", "Rcgdesc", "Rtnmin", "Rvmmin", "Rvmminq", "snewton", "snewtonm",
                  "spg", "ucminf", "newuoa", "bobyqa", "nmkb", "hjkb", "hjn", 
                  "lbfgs", "subplex", "lbfgsb3c")
 
 #  allpkg has package where element of allmeth is found
 #  This list must match list allmeth in length
       allpkg <-  c("stats", "stats", "stats", "stats", "stats", "stats",
-                "lbfgsb3", "optimx", "Rcgmin2", "optimx", "optimx", "optimx", "optimx", "optimx",
+                "lbfgsb3", "optimx", "Rcgmin2", "Rcgdescent", "optimx", "optimx", "optimx", "optimx", "optimx",
                 "BB", "ucminf", "minqa", "minqa", "dfoptim", "dfoptim", 
                 "optimx", "lbfgs", "subplex", "lbfgsb3c")
 
